experiement_output/error_log/nondex-ForlornDark-hybrid:quick-start.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task378/wd/NonDex-plugin-test/github.com/ForlornDark/hybrid/quick-start/src/test/java/com/lfm/boot/Test.java:3: error: package lombok.extern.slf4j does not exist
import lombok.extern.slf4j.Slf4j;
                          ^
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task378/wd/NonDex-plugin-test/github.com/ForlornDark/hybrid/quick-start/src/test/java/com/lfm/boot/Test.java:11: error: cannot find symbol
@Slf4j
 ^
  symbol: class Slf4j
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':quick-start:compileTestJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1m 1s
